# mentalics

./: main.py  other_types.py  pyproject.toml  readme.md
cfanalyzer/: __init__.py  archived_data.py  dearchiver.py  explorer.py  nsanalyzer.py  nscoding.py
cfanalyzer/ns_types/: ns_array.py  ns_data.py  ns_dictionary.py  ns_image.py  ns_mutable_data.py
mentalics/: __init__.py  ns_keyed_archive.py  nscoding.py  unarchiver.py
mentalics/foundation_types/ns/: __init__.py  ns_array.py  ns_attributed_string.py  ns_color.py  ns_color_space.py  ns_data.py  ns_date.py  ns_dictionary.py  ns_font.py  ns_image.py  ns_mutable_array.py  ns_mutable_data.py  ns_mutable_dictionary.py  ns_null.py  ns_point.py  ns_size.py  ns_url.py  ns_uuid.py
mentalics/ns_types/: __init__.py
