[tool.poetry]
name = "cfanalyzer"
version = "0.1.0"
description = ""
authors = ["NoRePercussions <tucker@tuckershea.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

